# react-native-duckdb

./: .gitattributes  .gitignore  BUILD.md  NitroDuckdb.podspec  README.md  jest.config.js  nitro.json  package.json
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/duckdb/: NitroDuckdbPackage.kt
cpp/: HybridDatabase.cpp  HybridDatabase.hpp  HybridDuckDB.cpp  HybridDuckDB.hpp  HybridPreparedStatement.cpp  HybridPreparedStatement.hpp
docs/: REACT_NATIVE_DUCKDB_RECOMMENDATIONS.md
ios/: Bridge.h
src/: extensions.ts  index.ts
src/__mocks__/: nitro-modules.ts
src/__tests__/: extensions.test.ts  parseQueryResult.test.ts
src/specs/: DuckDB.nitro.ts
